// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-details should render with _label="Zusammenfassung" _disabled=false _open=false 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=false _open=true 1`] = `
<kol-details _open="">
  <template shadowrootmode="open">
    <div class="collapsible collapsible--open kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _ariaexpanded="" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=true _open=false 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible collapsible--disabled kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _disabled="" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=true _open=true 1`] = `
<kol-details _open="">
  <template shadowrootmode="open">
    <div class="collapsible collapsible--disabled collapsible--open kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _ariaexpanded="" _disabled="" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=0 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=1 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=2 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=3 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=4 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=5 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=6 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="nonce">
      <h1 class="collapsible__heading kol-details__heading kol-headline kol-headline--h1 kol-headline--single">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" slot="expert"></kol-button-wc>
      </h1>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;
